alignment fixed

--- a/packages/commonwealth/client/scripts/views/components/CardsSlider/ActionCard/ActionCard.scss
+++ b/packages/commonwealth/client/scripts/views/components/CardsSlider/ActionCard/ActionCard.scss
@@ -75,5 +75,6 @@
 
   &.scaled-down {
     transform: scale(0.85);
+    transform-origin: left;
   }
 }
